2011-03-31 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Added writeFiles subcommand to allow direct writing to cookfs archive
	* doc/cookfs.n:
	* doc/cookfs.html:
	* doc/cookfs.man:

2011-03-20 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Properly handle mounting as volume if -volume option is specified
	* tests/vfs.test:

2011-03-20 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Fix in -setmetadata not being stored if being only operation
	* tests/vfs.test:

2011-03-18 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Added -setmetadata to Mount command; used to set metadata when mounting, for tools such as tabs
	* tests/vfs.test:
	* doc/cookfs.n:
	* doc/cookfs.html:
	* doc/cookfs.man:

2011-03-18 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/cookvfs.tcl: Added -fsindexobject to Mount command; used by cookit to retrieve metadata before mounting binary
	* tests/vfs.test:
	* doc/cookfs.n:
	* doc/cookfs.html:
	* doc/cookfs.man:

2011-03-14 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Changed a+ mode for writing to {RDWR CREAT} to prevent [tell] reporting incorrect location after writing index when using Tcl 8.4 on Windows
	* scripts/pages.tcl:

2011-03-11 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* doc/cookfs.man: Updated documentation for internal hash/pagehash method
	* doc/cookfs_pages.man:
	* doc/cookfs.html:
	* doc/cookfs_pages.html:
	* doc/cookfs.n:
	* doc/cookfs_pages.n:


2011-03-11 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* configure.in: Changed internal debugging so it is enabled at build time rather than just #if 0 / #if 1
	* configure:
	* generic/cookfs.h:

2011-03-10 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added support for crc32 as alternate checksum algorithm
	* generic/pagesCompr.c:
	* generic/pages.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* scripts/cookvfs.tcl:
	* tests/vfs.test: