@@ -1,3 +1,7 @@
+2011-04-08 Wojciech Kocjan <zoro2@users.sourceforge.net>
+	* scripts/pages.tcl: Added support for [$pages dataoffset] in pure Tcl version
+	* tests/pages.test: Test cases for [$pages dataoffset]
+
 2011-03-31 Wojciech Kocjan <zoro2@users.sourceforge.net>
 	* scripts/cookvfs.tcl: Added writeFiles subcommand to allow direct writing to cookfs archive
 	* doc/cookfs.n:
